# Proxiss

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build-from-source.md  build_wheel.bash  create_env.bash  project.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-wheels.yml  python-publish.yml
bindings/: proxi_binding.cc  proxi_cluster_binding.cc  proxi_flat_binding.cc  proxi_knn_binding.cc  proxi_pca_binding.cc
examples/: inference.py
include/: distance.hpp  matrix.hpp  mm_file.hpp  pca.h  pca.hpp  priority_queue.h  proxi.h  proxi_cluster.h  proxi_flat.h  proxi_knn.h  proxi_pca.h
proxi/: ProxiFlat.py  __init__.py
proxiss/: ProxiFlat.py  ProxiKNN.py  __init__.py
scripts/: bench_faiss.py  bench_proxi.py  bench_proxiss_flat.py  bench_proxiss_knn.py  bench_proxiss_pca.py  bench_sklearn_knn.py  make_data.py  proxi_save_load.py
src/: pca.cc  priority_queue.cc  proxi.cc  proxi_cluster.cc  proxi_flat.cc  proxi_knn.cc  proxi_pca.cc
tests/: compare_knn.py  test_proxi.py  test_proxi_flat.py  test_proxi_knn.py  test_proxi_pca.py
