[build-system]
requires = ["scikit-build-core", "pybind11", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "proxiss"
version = "0.4.0"
description = "Proxi: Accelerating nearest-neighbor search for high-dimensional data!"
authors = [
  {name = "Siddhant Biradar", email = "siddhant.biradar.pes@gmail.com"}
]
readme = "README.md"
license = {text = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.20",
  "ply",
  "six",
  "scipy",
  "sympy==1.14.0",
  "scikit-build-core>=0.11.5",
  "pytest>=8.4.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.cibuildwheel.linux]
before-all = "yum install -y clang"